--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="home-image">
+  <div class="row">
+    <div class="large-12 columns">
+      <%= image_tag "logo.svg", alt: "Thrive Logo", class: "logo" %>
+      <h2 class="uvp">Cultivating community by growing affordable local produce and sharing ideas for healthy living.</h2>
+      <%= link_to "Learn More", "#", class: "button radius learn-more" %>
+    </div>
+  </div>
+</div>
+<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, repellat, id ipsum vitae veritatis dolorum quas officia error sequi cupiditate tempore ut quaerat explicabo consequatur iusto eveniet tenetur cum eaque.lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam natus animi ratione saepe tenetur veritatis nulla inventore pariatur voluptas ad. Quisquam, et velit in sed officiis accusamus perferendis ipsum laborum!</h1>
