--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,14 @@
 
     <title><%= content_for?(:title) ? yield(:title) : "Thrive Neighborhood Market & Neighborhood Market" %></title>
 
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
+    <%= render 'layouts/navigation' %>
 
     <%= yield %>
     <%= javascript_include_tag "application" %>
