--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,9 @@ div.home-image {
   height: 525px;
   text-align: center;
   position:relative;
+  @media #{$small-only} {
+    height: 450px;
+  }
   .uvp {
     font-family: 'Open Sans', sans-serif;
     font-size: 3.0rem;
@@ -40,6 +43,9 @@ div.home-image {
       font-size: 1.5rem;
       margin: 10px 0 15px;
     }
+  }
+  div.logo-wrapper {
+    padding-right: 6%;
   }
   .logo {
     margin:20px 0 0;
@@ -65,9 +71,17 @@ div.home-image {
     background-color: #FF852A;
     box-shadow: 0px 3px 0px 0px darken(#FF852A, 25%);
     text-transform: uppercase;
+    @media #{$small-only} {
+      padding: 0.65rem 1.0rem 0.70rem;
+      font-size: 1rem;
+    }
     &:hover {
       background-color: darken(#FF852A, 10%);
     }
   }
 
+}
+
+.white {
+  color: #FFF;
 }
