change background to s3 link

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,7 +22,7 @@
 }
 
 div.home-image {
-  background: url('background.jpg') center center no-repeat;
+  background: url('https://s3.amazonaws.com/thrivemarket.org/images/background.jpg') center center no-repeat;
   background-size: cover;
   height: 525px;
   text-align: center;
