--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,9 +16,10 @@
 
  @import 'foundation_and_overrides';
 
+body { background-color: black; }
 
 .top-bar-logo {
-  margin: 10px 5px 10px 0;
+  margin: 10px 5px 10px 5px;
 }
 
 div.home-image {
@@ -28,7 +29,7 @@ div.home-image {
   text-align: center;
   position:relative;
   @media #{$small-only} {
-    height: 450px;
+    height: 500px;
   }
   .uvp {
     font-family: 'Open Sans', sans-serif;
