adjust logo styles

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1142,9 +1142,9 @@ $topbar-height: 65px;
 // $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
-// $topbar-dropdown-bg: #333;
+$topbar-dropdown-bg: #222;
 $topbar-dropdown-link-color: #37C300;
-// $topbar-dropdown-link-bg: #333;
+$topbar-dropdown-link-bg: #222;
 // $topbar-dropdown-link-weight: normal;
 // $topbar-dropdown-toggle-size: 5px;
 // $topbar-dropdown-toggle-color: #fff;
