--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,13 +36,17 @@ div.home-image {
     font-size: 3.0rem;
     letter-spacing: 3px;
     color:#FFF;
-    text-shadow: 1px 1px #333;
+    text-shadow: 1px 1px #000;
     @media #{$medium-up} {
       font-size: 2.2rem;
+      text-shadow: 2px 2px #000;
     }
     @media #{$small-only} {
       font-size: 1.5rem;
       margin: 10px 0 15px;
+    }
+    @media #{$large-up} {
+      margin-top: 35px;
     }
   }
   div.logo-wrapper {
@@ -72,6 +76,9 @@ div.home-image {
     @media #{$small-only} {
       padding: 0.65rem 1.0rem 0.70rem;
       font-size: 1rem;
+    }
+    @media #{$large-up} {
+      margin-top: 35px;
     }
     &:hover {
       background-color: darken(#FF852A, 10%);
