move styles to static pages css, add when link to nav

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,9 +13,10 @@
       <!-- Right Nav Section -->
       <ul class="right">
         <li><%= link_to "ABOUT", "#" %></li>
+        <li><%= link_to "WHEN", "#" %></li>
         <li><%= link_to "SURVEY", "#" %></li>
-        <li><%= link_to "BLOG", "#" %></li>
         <li><%= link_to "CONTACT", "#" %></li>
+        <li><%= link_to "BLOG", "#" %></li>
       </ul>
     </section>
   </nav>
