--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,70 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import 'foundation_and_overrides';
+
+div.home-image {
+  background: url('https://s3.amazonaws.com/thrivemarket.org/images/background.jpg') center center no-repeat;
+  background-size: cover;
+  height: 525px;
+  text-align: center;
+  position:relative;
+  @media #{$small-only} {
+    height: 540px;
+  }
+  .uvp {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 3.0rem;
+    letter-spacing: 3px;
+    color:#FFF;
+    text-shadow: 1px 1px #000;
+    @media #{$medium-up} {
+      font-size: 2.2rem;
+      text-shadow: 2px 2px #000;
+    }
+    @media #{$small-only} {
+      font-size: 1.5rem;
+      margin: 10px 0 15px;
+    }
+    @media #{$large-up} {
+      margin-top: 35px;
+    }
+  }
+  div.logo-wrapper {
+    padding-right: 6%;
+  }
+  .logo {
+    margin:20px 0 0;
+  }
+  .learn-more {
+    margin-top: 20px;
+    text-shadow: 0 1px rgba(0, 0, 0, 0.4);
+    color: #fff;
+    display:inline-block;
+    vertical-align: middle;
+    text-align: center;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background 0.1s ease-in-out;
+    -webkit-transition: background 0.1s ease-in-out;
+    -moz-transition: background 0.1s ease-in-out;
+    -ms-transition: background 0.1s ease-in-out;
+    -o-transition: background 0.1s ease-in-out;
+    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+    background-color: #FF852A;
+    box-shadow: 0px 3px 0px 0px darken(#FF852A, 25%);
+    text-transform: uppercase;
+    @media #{$small-only} {
+      padding: 0.65rem 1.0rem 0.70rem;
+      font-size: 1rem;
+    }
+    @media #{$large-up} {
+      margin-top: 35px;
+    }
+    &:hover {
+      background-color: darken(#FF852A, 10%);
+    }
+  }
+
+}
