move nav to bottom on medium and large screens

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,3 +25,10 @@ body { background-color: black; }
 .white {
   color: #FFF;
 }
+.section {
+  padding: 30px 0 30px;
+}
+
+.black {
+  background-color: #222;
+}
