--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -7,12 +7,12 @@
 div.home-image {
   background: url('https://s3.amazonaws.com/thrivemarket.org/images/background.jpg') center center no-repeat;
   background-size: cover;
-  height: 525px;
+  height: calc(100% - 65px);
   text-align: center;
   position:relative;
-  @media #{$small-only} {
-    height: 540px;
-  }
+  // @media #{$small-only} {
+  //   height: 540px;
+  // }
   .uvp {
     font-family: 'Open Sans', sans-serif;
     font-size: 3.0rem;
@@ -66,5 +66,10 @@ div.home-image {
       background-color: darken(#FF852A, 10%);
     }
   }
+}
+.about {
+  text-align: center;
+  .icon {
 
+  }
 }
