--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,10 @@
-<div class="home-image">
+<div class="section about", id="about">
   <div class="row">
-    <div class="large-12 columns">
-      <div class="logo-wrapper">
-        <%= image_tag "logo.svg", alt: "Thrive Logo", class: "logo" %>
-      </div>
-      <h2 class="uvp">Cultivating community by growing affordable local produce and sharing ideas for healthy living.</h2>
-      <%= link_to "Learn More", "#", class: "button radius learn-more" %>
+    <div class="large-5 columns">
+      <%= image_tag "cultivating.svg", class: "icon" %>
+    </div>
+    <div class="large-7 columns">
+
     </div>
   </div>
 </div>
