--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="contain-to-grid fixed">
+<div class="contain-to-grid sticky">
   <nav class="top-bar" data-topbar>
     <ul class="title-area">
       <li class="name">
@@ -12,7 +12,7 @@
     <section class="top-bar-section">
       <!-- Right Nav Section -->
       <ul class="right">
-        <li><%= link_to "ABOUT", "#" %></li>
+        <li><%= link_to "ABOUT", "#about", class: "smooth" %></li>
         <li><%= link_to "WHEN", "#" %></li>
         <li><%= link_to "SURVEY", "#" %></li>
         <li><%= link_to "CONTACT", "#" %></li>
