--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="contain-to-grid sticky">
+<div class="contain-to-grid fixed" id="nav">
   <nav class="top-bar" data-topbar>
     <ul class="title-area">
       <li class="name">
@@ -14,7 +14,7 @@
       <ul class="right">
         <li><%= link_to "ABOUT", "#about", class: "smooth" %></li>
         <li><%= link_to "WHEN", "#" %></li>
-        <li><%= link_to "SURVEY", "#" %></li>
+        <li><%= link_to "SPONSORS", "#" %></li>
         <li><%= link_to "CONTACT", "#" %></li>
         <li><%= link_to "BLOG", "#" %></li>
       </ul>
