--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -10,10 +10,11 @@ div.home-image {
   text-align: center;
   position:relative;
   @media #{$medium-up} {
-    height: calc(100% - 65px);
+    height: 100%;
+    min-height: 535px;
   }
   @media #{$small-only} {
-    height: 540px;
+    height: 600px;
   }
   .uvp {
     font-family: 'Open Sans', sans-serif;
@@ -70,8 +71,76 @@ div.home-image {
   }
 }
 .about {
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: 1px;
   text-align: center;
+  @media #{$medium-up} {
+    text-align: left;
+  }
+  h3 {
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 30px;
+    font-weight: 200;
+    letter-spacing: 2px;
+    text-align: center;
+    @media #{$medium-up} {
+      text-align: left;
+    }
+  }
+  div.arrow-down {
+    text-align: center;
+    @media #{$medium-up} {
+      text-align: left;
+      margin-left: 100px;
+    }
+  }
+  a.arrow-down {
+    color:white;
+    .fa-circle {
+      color: rgba(55, 195, 0, 0.30);
+    }
+    .fa-angle-down {
+      color:white;
+      font-weight: bold;
+    }
+    &:hover .fa-circle {
+      -webkit-transition: color 300ms ease-in;
+      -moz-transition: color 300ms ease-in;
+      -ms-transition: color 300ms ease-in;
+      -o-transition: color 300ms ease-in;
+      transition: color 300ms ease-in;
+      color:$anchor-font-color;
+    }
+    &:hover .fa-angle-down {
+      -webkit-transition: color 300ms ease-in;
+      -moz-transition: color 300ms ease-in;
+      -ms-transition: color 300ms ease-in;
+      -o-transition: color 300ms ease-in;
+      transition: color 300ms ease-in;
+      color:white;
+    }
+  }
   .icon {
-
+    width: 200px;
+    height: auto;
+    @media #{$medium-up} {
+      width: 250px;
+      height: auto;
+    }
+  }
+}
+div.sponsors {
+  h3 {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  img {
+    margin: 30px;
+  }
+  p {  margin-bottom: 5px;}
+  a.social-links {
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 1.5rem;
   }
 }
