--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -76,7 +76,7 @@
   <div class="row">
     <div class="medium-12 columns sponsors">
       <h3 class="white">Our community sponsors:</h3>
-      <ul class="small-block-grid-2">
+      <ul class="small-block-grid-1 medium-block-grid-2">
         <li class="center">
           <%= image_tag "st_pauls_logo.png" %>
           <p class="white">St. Paul's Episcopal Church</p>
