--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -62,7 +62,7 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, earum, recusandae itaque ipsa provident atque inventore repellat odio explicabo vel nam officiis quaerat et minus ea cumque omnis nostrum quos!
       </p>
       <div class="arrow-down">
-        <%= link_to "#about", class: "smooth arrow-down" do %>
+        <%= link_to "#sponsors", class: "smooth arrow-down" do %>
           <span class="fa-stack fa-2x">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-angle-down fa-stack-1x"></i>
