--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,6 +30,9 @@ body.f-topbar-fixed { padding:0;}
 }
 .section {
   padding: 60px 0 60px;
+}
+.dashed-border {
+  border-top: 1px dashed #555;
   border-bottom: 1px dashed #555;
 }
 
@@ -38,4 +41,30 @@ body.f-topbar-fixed { padding:0;}
 }
 .center {
   text-align: center;
+}
+.button.learn-more {
+  background-color: #FF852A;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.4);
+  color: #fff;
+  display:inline-block;
+  vertical-align: middle;
+  text-align: center;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background 0.1s ease-in-out;
+  -webkit-transition: background 0.1s ease-in-out;
+  -moz-transition: background 0.1s ease-in-out;
+  -ms-transition: background 0.1s ease-in-out;
+  -o-transition: background 0.1s ease-in-out;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+  background-color: #FF852A;
+  box-shadow: 0px 3px 0px 0px darken(#FF852A, 25%);
+  text-transform: uppercase;
+  @media #{$small-only} {
+    padding: 0.65rem 1.0rem 0.70rem;
+    font-size: 1rem;
+  }
+  &:hover {
+    background-color: darken(#FF852A, 10%);
+  }
 }
