--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,6 +60,7 @@ body.f-topbar-fixed { padding:0;}
   background-color: #FF852A;
   box-shadow: 0px 3px 0px 0px darken(#FF852A, 25%);
   text-transform: uppercase;
+  -webkit-appearance: none;
   @media #{$small-only} {
     padding: 0.65rem 1.0rem 0.70rem;
     font-size: 1rem;
