updated nav links

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,9 +13,9 @@
       <!-- Right Nav Section -->
       <ul class="right">
         <li><%= link_to "ABOUT", "#about", class: "smooth" %></li>
-        <li><%= link_to "WHEN", "#" %></li>
-        <li><%= link_to "SPONSORS", "#" %></li>
-        <li><%= link_to "CONTACT", "#" %></li>
+        <li><%= link_to "WHEN", "#when", class: "smooth" %></li>
+        <li><%= link_to "SPONSORS", "#sponsors", class: "smooth" %></li>
+        <li><%= link_to "CONTACT", "#", class: "smooth" %></li>
         <li><%= link_to "BLOG", "#" %></li>
       </ul>
     </section>
