adjust styles, add footer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,3 +69,12 @@ body.f-topbar-fixed { padding:0;}
     background-color: darken(#FF852A, 10%);
   }
 }
+.light-gray {
+  color:#BBB;
+}
+footer {
+  padding: 20px 0;
+  p {
+    margin-bottom: 0;
+  }
+}
