--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,7 @@
         <li><%= link_to "ABOUT", "#about", class: "smooth" %></li>
         <li><%= link_to "WHEN", "#when", class: "smooth" %></li>
         <li><%= link_to "SPONSORS", "#sponsors", class: "smooth" %></li>
-        <li><%= link_to "CONTACT", "#", class: "smooth" %></li>
+        <li><%= link_to "CONTACT", "#contact", class: "smooth" %></li>
         <li><%= link_to "BLOG", "#" %></li>
       </ul>
     </section>
