adjust calendar time font size

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -146,6 +146,9 @@ div.dates {
       font-size: 4rem;
       line-height: 1;
     }
+    small {
+      font-size: 75%;
+    }
   }
 }
 div.form-wrapper {
