--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1239,7 +1239,30 @@ $topbar-dropdown-label-bg: #222;
 // $range-slider-handle-bg-hover-color: scale-color($primary-color, $lightness: -12%);
 // $range-slider-handle-cursor: pointer;
 
-@import 'foundation';
+// @import 'foundation';
+@import "foundation/components/grid",
+  "foundation/components/alert-boxes",
+  "foundation/components/block-grid",
+  "foundation/components/button-groups",
+  "foundation/components/buttons",
+  "foundation/components/clearing",
+  "foundation/components/dropdown",
+  "foundation/components/forms",
+  "foundation/components/inline-lists",
+  "foundation/components/keystrokes",
+  "foundation/components/labels",
+  "foundation/components/pagination",
+  "foundation/components/panels",
+  "foundation/components/reveal",
+  "foundation/components/side-nav",
+  "foundation/components/sub-nav",
+  "foundation/components/tables",
+  "foundation/components/tabs",
+  "foundation/components/thumbs",
+  "foundation/components/tooltips",
+  "foundation/components/top-bar",
+  "foundation/components/type",
+  "foundation/components/visibility";
 
 .contain-to-grid {
   opacity:0.95;
