--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,7 +16,7 @@
         <li><%= link_to "WHEN", "#when", class: "smooth" %></li>
         <li><%= link_to "SPONSORS", "#sponsors", class: "smooth" %></li>
         <li><%= link_to "CONTACT", "#contact", class: "smooth" %></li>
-        <li><%= link_to "BLOG", "#" %></li>
+        <li><%= link_to "BLOG", "http://thrivemarket.tumblr.com/" %></li>
       </ul>
     </section>
   </nav>
