--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -81,7 +81,7 @@
     <div class="large-12 small-8 small-centered medium-8 medium-centered columns center">
       <h3 class="center">Market Dates</h3>
       <h5 class="center">
-        Join us at <%= link_to "St. Paul's Episcopal Church", "http://stpaulsdekalb.org/" %> on the 4th Saturday of each month from June through September.
+        Join us at <%= link_to "St. Paul's Episcopal Church", "http://stpaulsdekalb.org/" %> on the fourth Saturday of each month.
       </h5>
       <div class="dates">
         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-4">
