--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,7 +28,10 @@ body.f-topbar-fixed { padding:0;}
   color: #FFF;
 }
 .section {
-  padding: 60px 0 60px;
+  padding: 30px 0 30px;
+  @media #{medium-up} {
+    padding: 60px 0 60px;
+  }
 }
 .dashed-border {
   border-top: 1px dashed #555;
