--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,9 +28,9 @@ body.f-topbar-fixed { padding:0;}
   color: #FFF;
 }
 .section {
-  padding: 30px 0 30px;
-  @media #{medium-up} {
-    padding: 60px 0 60px;
+  padding: 30px 0;
+  @media #{$medium-up} {
+    padding: 60px 0;
   }
 }
 .dashed-border {
