--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
+<%= render 'survey' %>
+<% unless session[:survey_taken].present? %>
+
+<% end %>
 <div class="home-image f-topbar-fixed">
   <div class="row">
     <div class="medium-12 columns">
@@ -188,11 +192,17 @@
         <%= form_tag "http://api.formspree.com/jameswilliamiii@gmail.com" do %>
         <div class="row">
           <div class="medium-4 medium-offset-2 small-11 small-centered columns">
+            <!--[if IE]>
+            <%= label_tag :email %>
+            <![endif]-->
             <%= email_field_tag :email, nil, placeholder: "Email", name: "_replyto" %>
           </div>
         </div>
         <div class="row">
           <div class="medium-8 medium-centered small-11 small-centered columns">
+            <!--[if IE]>
+            <%= label_tag "Your Message" %>
+            <![endif]-->
             <%= text_area_tag :content, nil, placeholder: "Enter your message here", rows: 4, name: "content" %>
           </div>
         </div>
