add js code to add cookie for 1 day if survey question is seen

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <%= render 'static_pages/survey' %>
-<% unless session[:survey_taken].present? %>
+<% unless session[:survey_seen].present? %>
 
 <% end %>
 <div class="home-image f-topbar-fixed">
