--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -137,7 +137,7 @@
         <%= form_for @phone_number do |f| %>
           <div class="row">
             <div class="medium-7 columns">
-              <%= f.telephone_field :number, placeholder: "(XXX) XXX XXXX", class: "large-font" %>
+              <%= f.telephone_field :number, placeholder: "(XXX) XXX XXXX", class: "large-font", required: true %>
             </div>
             <div class="medium-5 small-12 columns end">
               <%= f.submit "SIGN UP", class: "button learn-more radius expand" %>
@@ -195,7 +195,7 @@
             <!--[if IE]>
             <%= label_tag :email %>
             <![endif]-->
-            <%= email_field_tag :email, nil, placeholder: "Email", name: "_replyto" %>
+            <%= email_field_tag :email, nil, placeholder: "Email", name: "_replyto", required: true %>
           </div>
         </div>
         <div class="row">
@@ -203,7 +203,7 @@
             <!--[if IE]>
             <%= label_tag "Your Message" %>
             <![endif]-->
-            <%= text_area_tag :content, nil, placeholder: "Enter your message here", rows: 4, name: "content" %>
+            <%= text_area_tag :content, nil, placeholder: "Enter your message here", rows: 4, name: "content", required: true %>
           </div>
         </div>
         <div class="row">
