--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -134,10 +134,13 @@
     <div class="medium-10 medium-centered columns">
       <h3 class="center">Enter your phone number to receive SMS updates</h3>
       <div class="form-wrapper phone-wrapper">
-        <%= form_for @phone_number do |f| %>
+        <%= form_for @phone_number, html: { :"data-abide" => "" } do |f| %>
           <div class="row">
             <div class="medium-7 columns">
-              <%= f.telephone_field :number, placeholder: "(XXX) XXX XXXX", class: "large-font", required: true %>
+              <div class="input-wrapper">
+                <%= f.telephone_field :number, placeholder: "123-456-7890", pattern: "phone", class: "large-font", required: true %>
+                <small class="error">A valid phone number is required.</small>
+              </div>
             </div>
             <div class="medium-5 small-12 columns end">
               <%= f.submit "SIGN UP", class: "button learn-more radius expand" %>
@@ -189,13 +192,16 @@
     <div class="medium-12 columns">
       <h3 class="center">Do you have questions, suggestions, or feedback?</h3>
       <div class="form-wrapper">
-        <%= form_tag "http://api.formspree.com/jameswilliamiii@gmail.com" do %>
+        <%= form_tag "http://api.formspree.com/jameswilliamiii@gmail.com", :"data-abide" => "" do %>
         <div class="row">
           <div class="medium-4 medium-offset-2 small-11 small-centered columns">
             <!--[if IE]>
             <%= label_tag :email %>
             <![endif]-->
-            <%= email_field_tag :email, nil, placeholder: "Email", name: "_replyto", required: true %>
+            <div class="input-wrapper">
+              <%= email_field_tag :email, nil, placeholder: "Email", name: "_replyto", required: true, pattern: "email" %>
+              <small class="error">A valid email address is required.</small>
+            </div>
           </div>
         </div>
         <div class="row">
@@ -203,7 +209,10 @@
             <!--[if IE]>
             <%= label_tag "Your Message" %>
             <![endif]-->
-            <%= text_area_tag :content, nil, placeholder: "Enter your message here", rows: 4, name: "content", required: true %>
+            <div class="input-wrapper">
+              <%= text_area_tag :content, nil, placeholder: "Enter your message here", rows: 4, name: "content", required: true %>
+              <small class="error">You must provide a message</small>
+            </div>
           </div>
         </div>
         <div class="row">
