--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <meta property="og:url" content="http://thrivemarket.org">
     <meta property="og:title" content="<%= content_for?(:title) ? yield(:title) : 'Thrive Neighborhood Market & Community Garden' %>">
     <meta property="og:description" content="<%= content_for?(:desc) ? yield(:desc) : 'Cultivating community by growing affordable local produce and sharing ideas for healthy living.' %>">
-    <meta property="og:image" content="<%= image_tag 'background_tumblr.jpg' %>">
+    <meta property="og:image" content="https://s3.amazonaws.com/thrivemarket.org/images/background_tumblr.jpg">
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag    "application" %>
