add sticky footer, add survey section on home page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,6 +33,10 @@ body.f-topbar-fixed { padding:0;}
     padding: 60px 0;
   }
 }
+.section.survey {
+  padding:15px 0 20px;
+  text-align: center;
+}
 .dashed-border {
   border-top: 1px dashed #555;
   border-bottom: 1px dashed #555;
@@ -86,4 +90,8 @@ footer {
 div.message-wrapper {
   margin-top: 10px;
   text-align: left;
+}
+div.main-wrapper {
+  margin-top: 70px;
+  padding: 30px 0;
 }
