--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,17 +1,19 @@
-<footer class="black">
-  <div class="row">
-    <div class="medium-12 columns">
-      <h6 class="light-gray center">
-        Thrive Neighborhood Market & Community Garden<br>
-        St. Paul's Episcopal Church<br>
-        900 Normal Rd.<br>
-        DeKalb, IL 60115<br>
-        (815) 756‐4888<br>
-        <%= link_to "info@thrivemarket.org", "mailto:info@thrivemarket.org" %>
-      </h6>
-      <div class="copyright center">
-        <small class="light-gray">&copy; St. Paul's Episcopal Church 2014</small>
+<div id="footer">
+  <footer class="black">
+    <div class="row">
+      <div class="medium-12 columns">
+        <h6 class="light-gray center">
+          Thrive Neighborhood Market & Community Garden<br>
+          St. Paul's Episcopal Church<br>
+          900 Normal Rd.<br>
+          DeKalb, IL 60115<br>
+          (815) 756‐4888<br>
+          <%= link_to "info@thrivemarket.org", "mailto:info@thrivemarket.org" %>
+        </h6>
+        <div class="copyright center">
+          <small class="light-gray">&copy; St. Paul's Episcopal Church 2014</small>
+        </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
+</div>
