--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,6 +12,14 @@
     </div>
   </div>
 </div>
+<div class="section survey", id="about">
+  <div class="row">
+    <div class="medium-12 columns">
+      <h3>Would you like to help us select what we will grow this year?</h3>
+      <a href="#" class="button learn-more small radius" data-reveal-id="myModal" data-reveal>Take our survey now</a>
+    </div>
+  </div>
+</div>
 <div class="section black about", id="about">
   <div class="row">
     <div class="medium-5 columns center">
