add cc attibutes to footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,6 +12,13 @@
         </h6>
         <div class="copyright center">
           <small class="light-gray">&copy; St. Paul's Episcopal Church 2014</small>
+          <br>
+          <small class="cc">
+            Cultivating designed by Jerry Wang from the <%= link_to "Noun Project", "http://thenounproject.com/term/cultivating/38049/", class: "cc" %>,
+          </small>
+          <small class="cc">
+            and hearts designed by Brandosaur.us from the <%= link_to "Noun Project", "http://thenounproject.com/term/hearts/31226/", class: "cc" %>
+          </small>
         </div>
       </div>
     </div>
