--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -95,3 +95,10 @@ div.main-wrapper {
   margin-top: 70px;
   padding: 30px 0;
 }
+.cc {
+  color: #888888;
+  a {
+    color: inherit;
+    text-decoration: underline;
+  }
+}
